2006-06-24  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #374713 and #374887.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(run_chroot): Log error and exit with failure status if run_child
	throws an exception.
	(run_child): Throw exception on failure, rather than exiting,
	which simplifies the error handling.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* dchroot/Makefile.am (libdchroot_la_SOURCES): Add
	dchroot-main-base.(cc|h).

	* dchroot-dsa/dchroot-dsa-main.(cc|h): Derive from
	dchroot::main_base, and remove functionality shared with dchroot
	contained in main_base.

	* dchroot/dchroot-main.(cc|h):  Derive from main_base, and remove
	functionality shared with dchroot-dsa contained in main_base.

	* dchroot/dchroot-main-base.(cc|h): New files.  A class containing
	functionality common to the main class of dchroot and dchroot-dsa.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.(cc|h): Fix typos.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.(cc|h): Use error codes for logging in
	addition to thrown exceptions.

	* sbuild/sbuild-chroot-config.(cc|h): Use error codes for logging
	in addition to thrown exceptions.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* Move sbuild sources into an sbuild subdirectory, dchroot sources
	into a dchroot subdirectory and dchroot-dsa sources into a
	dchroot-dsa subdirectory.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* The include order of all includes has been reviewed.  Local
	headers are included first to detect missing includes.  C++
	headers are used instead of C headers.

	* All sources include only the headers they need, rather than
	using sbuild.h.

	* schroot/sbuild.h: Remove.

	* schroot/sbuild-types.h: date operator << uses "%b" rather than
	"%B" in the date format string.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document dchroot compatibility fixes.
