@@ -1,5 +1,15 @@
 2006-06-24  Roger Leigh  <rleigh@debian.org>
 
+	* README: Add dchroot and dchroot-dsa.
+
+	* schroot/schroot.1.in: Add troubleshooting section.
+
+	* dchroot/dchroot.1.in: Add troubleshooting section.
+
+	* dchroot-dsa/dchroot-dsa.1.in: Add troubleshooting section.
+
+2006-06-24  Roger Leigh  <rleigh@debian.org>
+
 	* debian/changelog: Close #374713 and #374887.
 
 2006-06-24  Roger Leigh  <rleigh@debian.org>
